# Azu

./: .gitignore  LICENSE  README.md  SignPath-Application.xlsx  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
docs/: index.html  logo-preview.html
docs/marketing/: launch-posts.md
docs/site/: humans.txt  icon-render.html  index.html
docs/superpowers/plans/: 2026-03-26-phase1-terminal-core.md  2026-03-28-fase2-pipeline-automation.md  2026-04-02-signpath-code-signing.md  2026-04-03-azu-term-custom-terminal.md  2026-04-10-ssh-client-phase1-shell.md  2026-04-11-port-forwarding.md  2026-04-11-sftp-panel.md
docs/superpowers/specs/: 2026-03-26-azu-terminal-design.md  2026-03-28-fase2-pipeline-automation.md  2026-04-02-signpath-code-signing.md  2026-04-03-azu-term-custom-terminal.md  2026-04-10-auto-updater-design.md  2026-04-10-ssh-client-design.md  2026-04-11-aws-lightsail-discovery.md  2026-04-11-payment-pro-design.md  2026-04-11-sftp-panel-design.md
scripts/: generate-icons.mjs
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  rich.rs
src-tauri/src/commands/: clipboard.rs  config.rs  dialog.rs  env.rs  license.rs  mod.rs  pipeline.rs  pty.rs  ssh.rs  window.rs
src-tauri/src/license/: license.rs  mod.rs
src-tauri/src/pipeline/: mod.rs  runner.rs  types.rs
src-tauri/src/pty/: manager.rs
src-tauri/src/ssh/: cloud_aws.rs  config_parser.rs  connection.rs  forwarding.rs  manager.rs  mod.rs  session.rs  sftp.rs  types.rs
src/components/Grid/: Grid.tsx  GridCell.tsx  (+5 more)
src/lib/: keybindings.ts  tauri-commands.ts
src/stores/: grid.ts  license.ts  pipeline.ts  ssh.ts  terminal.ts  theme.ts  updater.ts
src/styles/: global.css
src/terminal/: buffer.ts  index.ts  input.ts  parser.ts  renderer.ts  terminal.ts  types.ts
src/themes/: azu-dark.ts  azu-light.ts  azu-orange.ts  dracula.ts  ember-glow.ts  index.ts  midnight-gold.ts  nord.ts  rose-quartz.ts  sunrise-gold.ts  tokyo-night.ts
worker/: package.json  wrangler.toml
worker/src/: index.ts
(+16 files in other folders)
