[package]
name = "azu"
version = "0.1.0"
description = "Azu - AI-native terminal"
authors = ["Nico Arriola <nico.arriola@gmail.com>"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "azu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
toml = "0.8"
notify = "7"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rfd = "0.15"
russh = { version = "0.54", default-features = false, features = ["flate2", "ring"] }
russh-sftp = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 2
strip = true

[profile.dev]
incremental = true
